--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,10 +5,10 @@
 
 @inproceedings{song2025silence,
   bibtex_show={true},
-  abbr={AutoAR},
+  abbr={NDSS25},
   title={Silence False Alarms: Identifying Anti-Reentrancy Patterns on Ethereum to Refine Smart Contract Reentrancy Detection},
   author={Song, Qiyang and Huang, Heqing and Jia, Xiaoqi and Xie, Yuanbo and Cao, Jiahao},
-  booktitle={The Network and Distributed System Symposium},
+  booktitle={The Network and Distributed System Symposium (NDSS) 2025},
   year={2025},
   html={https://www.ndss-symposium.org/ndss-paper/silence-false-alarms-identifying-anti-reentrancy-patterns-on-ethereum-to-refine-smart-contract-reentrancy-detection/},
   pdf={silence_false_alarms.pdf},
@@ -20,10 +20,10 @@
 
 @inproceedings{qiyang2021try,
   bibtex_show={true},
-  abbr={Primal},
+  abbr={ACSAC21},
   title={Try before You Buy: Privacy-preserving Data Evaluation on Cloud-based Machine Learning Data Marketplace},
   author={Song, Qiyang and Cao, Jiahao, and Sun, Kun and Li, Qi and Xu, Ke},
-  booktitle={Annual Computer Security Applications Conference},
+  booktitle={Annual Computer Security Applications Conference (ACSAC) 2021},
   pages={260--272},
   year={2021},
   selected={true},
@@ -37,7 +37,7 @@
 
 @article{song2020sap,
   bibtex_show={true},
-  abbr={SAP-SSE},
+  abbr={TIFS20},
   title={SAP-SSE: Protecting search patterns and access patterns in searchable symmetric encryption},
   author={Song, Qiyang and Liu, Zhuotao and Cao, Jiahao and Sun, Kun and Li, Qi and Wang, Cong},
   journal={IEEE Transactions on Information Forensics and Security},
@@ -54,7 +54,7 @@
 
 @article{li2021gpsc,
   bibtex_show={true},
-  abbr={GPSC},
+  abbr={TKDE21},
   title={GPSC: A grid-based privacy-reserving framework for online spatial crowdsourcing},
   author={Li, Haoda and Song, Qiyang and Li, Guoliang and Li, Qi and Wang, Rengui},
   journal={IEEE Transactions on Knowledge and Data Engineering},
@@ -73,7 +73,7 @@
 
 @inproceedings{choi2019federated,
   bibtex_show={true},
-  abbr={FederatedNN},
+  abbr={DSC19},
   title={Federated-cloud based deep neural networks with privacy preserving image filtering techniques},
   author={Choi, Isabelle and Song, Qiyang and Sun, Kun},
   booktitle={2019 IEEE Conference on Dependable and Secure Computing (DSC)},
@@ -88,10 +88,10 @@
 
 @inproceedings{liu2020sgx,
   bibtex_show={true},
-  abbr={SGX-Cube},
+  abbr={SecureComm20},
   title={Sgx-cube: An sgx-enhanced single sign-on system against server-side credential leakage},
   author={Liu, Songsong and Song, Qiyang and Sun, Kun and Li, Qi},
-  booktitle={Security and Privacy in Communication Networks: 16th EAI International Conference, SecureComm 2020, Washington, DC, USA, October 21-23, 2020, Proceedings, Part II 16},
+  booktitle={Security and Privacy in Communication Networks: 16th EAI International Conference, SecureComm 2020},
   pages={275--290},
   year={2020},
   organization={Springer International Publishing},
@@ -106,7 +106,7 @@
 
 @inproceedings{yao2019csfc,
   bibtex_show={true},
-  abbr={cSFC},
+  abbr={GlobeCom19},
   title={cSFC: Building credible service function chain on the cloud},
   author={Yao, Shengsheng and Xu, Mingwei and Li, Qi and Cao, Jiahao and Song, Qiyang},
   booktitle={2019 IEEE Global Communications Conference (GLOBECOM)},
