--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,7 @@
   abbr={NDSS25},
   title={Silence False Alarms: Identifying Anti-Reentrancy Patterns on Ethereum to Refine Smart Contract Reentrancy Detection},
   author={Song, Qiyang and Huang, Heqing and Jia, Xiaoqi and Xie, Yuanbo and Cao, Jiahao},
-  booktitle={The Network and Distributed System Symposium (NDSS) 2025},
+  booktitle={The Network and Distributed System Security (NDSS) Symposium 2025},
   year={2025},
   html={https://www.ndss-symposium.org/ndss-paper/silence-false-alarms-identifying-anti-reentrancy-patterns-on-ethereum-to-refine-smart-contract-reentrancy-detection/},
   pdf={silence_false_alarms.pdf},
